<resources>
    <string name="appName">GaPharma</string>
    <string name="labelCipCode">CIP Code</string>
    <string name="messageWelcome">Bienvenue</string>
    <string name="inputIdentifiant">Identifiant</string>
    <string name="inputPassword">Mot de passe</string>
    <string name="inputNom">Nom</string>
    <string name="inputEmail">Email</string>
    <string name="inputCIP">CIP</string>
    <string name="inputRole">Role</string>
    <string name="buttonLogin">S\'IDENTIFIER</string>
    <string name="labelUsername">Nom de l\'utilisateur</string>
    <string name="labelSelectOption">Choisir une option</string>
    <string name="buttonLogout">Déconnecté</string>
    <string name="buttonRegister">Enregistrer</string>
    <string name="titleCreateNcf">Créer une nouvelle FNC</string>
    <string name="titleManageAnomalies">Gérer les <font color='#6200ea'>anomalies</font> détectées
    </string>
    <string name="titleEnterOrderNumber">Saisir le
        <font color='#6200ea'>numéro de commande</font>
    </string>
    <string name="titleEnterProblemType">Saisir le
        <font color='#6200ea'>type de problème</font>
    </string>
    <string name="buttonCreateNcf">Créer une nouvelle FNC</string>
    <string name="buttonUpdateNcf">Mettre à jour la FNC</string>
    <string name="labelOrderNumber">Numéro de commande</string>
    <string name="buttonNext">SUIVANT</string>
    <string name="labelCarrier">Transporteur</string>
    <string name="labelSupplier">Fournisseur</string>
    <string name="labelNcfNumber">Numéro FNC</string>
    <string name="labelDescription">Description</string>
    <string name="buttonAttachFile">Joindre Fichier</string>
    <string name="labelPhoto">Photo</string>
    <string name="buttonAttachPhoto">Joindre Photo</string>
    <string name="inputComment">Commentaire</string>
    <string name="messageNoSummaryAvailable">Aucun récapitulatif disponible</string>
    <string name="labelProblemType">Type de problème</string>
    <string name="labelProductCode">Code produit</string>
    <string name="promptSelectOption">Veuillez sélectionner une option</string>
    <string name="messageErrorOccurred">Une erreur s\'est produite!</string>
    <string name="titleMainActivity">MainActivity</string>
    <string name="titleHome">Acceuil</string>
    <string name="titleDashboard">Dashboard</string>
    <string name="titleAddUser">Ajouter un <font color='#6200ea'>utilisateur</font></string>
    <string name="titleAppSettings">Données <font color='#6200ea'>statiques</font></string>
    <string name="titleNotifications">Notifications</string>
    <string name="messageNcfSentSuccess">La FNC a été envoyée avec succès</string>
    <string name="labelYourFNC">Vos FNC</string>
    <string name="labelFncPicker">FNC_Picker</string>
    <string name="formatDate">(DD/MM/YYYY)</string>
    <string name="buttonAddLine">AJOUTER LA LIGNE</string>
    <string name="buttonClose">Fermer</string>
    <string name="buttonSave">Sauvegarder</string>
    <string name="buttonAddUser">Ajouter utilisateur</string>
    <string name="labelQuantity">Quantité</string>
    <string name="inputCommentText">Texte du commentaire</string>
    <string name="actionTakePhoto">Take Photo</string>
    <string name="actionSelectFromGallery">Select from Gallery</string>
    <string name="errorLoginFailed">Adresse e-mail ou mot de passe incorrect</string>
    <string name="promptSelectDate">Cliquez ici pour sélectionner une date</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="labelForGallery">Galerie</string>
    <string name="labelForCamera">Camera</string>
    <string name="labelForDocument">Document</string>
    <string name="labelForFncState">Etat FNC</string>
    <string name="labelForFncType">Type FNC</string>
    <string name="labelForFncRep">Répertoire FNC</string>


    <!--Error Messages-->
    <string name="errorLogin">Identifiant ou mot de passe incorrect.</string>
    <string name="errorLoginCipCode">CIP code incorrect.</string>
    <string name="errorSelectOrder">Veuillez entrer un numéro de commande.</string>
    <string name="errorEmptyComment">Veuillez saisir un commentaire.</string>
    <string name="errorEmptyCodeProduct">Veuillez saisir un code produit.</string>
    <string name="errorEmptyProblemType">Veuillez saisir le type de problème.</string>
    <string name="errorEmptyQuantity">Veuillez saisir une quantité.</string>
    <string name="errorIdentity">Veuillez saisir votre identifiant.</string>
    <string name="errorPassword">Veuillez saisir votre mot de passe.</string>
    <string name="errorInvalidFileFormat">Le fichier est corrompu.</string>
    <string name="errorSavingDocument">Erreur lors de l\'enregistrement du document.</string>
    <string name="errorScan">Erreur de numérisation du code-barres.</string>
    <string name="errorEmptyName">Veuillez saisir un nom.</string>
    <string name="errorEmptyIdentity">Veuillez saisir un identifiant.</string>
    <string name="errorEmptyEmail">Veuillez saisir un email.</string>
    <string name="errorEmptyPassword">Veuillez saisir un password.</string>
    <string name="errorEmptyCIP">Veuillez saisir un cip.</string>
    <string name="errorEmptyRole">Veuillez saisir un role.</string>
    <string name="errorInvalidEmail">Email format invalide.</string>
    <string name="errorEmptyState">Veuillez saisir un state.</string>
    <string name="errorEmptyType">Veuillez saisir un type.</string>
    <string name="errorEmptyDir">Veuillez saisir un répertoire.</string>



    <!--Delete Modal-->
    <string name="titleDelete">Confirmer la Suppression</string>
    <string name="messageDelete">Êtes-vous sûr de vouloir supprimer cet élément ?</string>
    <string name="buttonDelete">Supprimer</string>
    <string name="buttonCancel">Annuler</string>

    <!--Dummy Strings Can replace with real content from Database-->
    <string-array name="planets_array">
        <item>JD01634686900</item>
        <item>JD01634686666</item>
        <item>JD01634687866</item>
        <item>ND12725913778</item>
        <item>NT01421755431</item>
        <item>NT01421755431</item>
        <item>NT01421755431</item>
    </string-array>

    <string-array name="issue_type">
        <item>Coli abimé transport sans résrve</item>
        <item>Coli abimé transport avec résrve</item>
        <item>Coli manquant</item>
        <item>Problème de conformité de température</item>
        <item>Produit.s abimé.s dans colis intact</item>
        <item>Produit.s manquant.s dans colis intact</item>
        <item>Produit.s en +</item>
    </string-array>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="addUserDesc">Ajouter utilisateur</string>


</resources>