<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="MissingConstraints"
    tools:context=".ui.activities.AuthenticationActivity"
    >

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/verticalL"
        style="@style/verticalL"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/verticalR"
        style="@style/verticalR"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontalT"
        style="@style/horizontalT"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/messageWelcome"
        android:textColor="@color/black"
        android:textSize="@dimen/_30sdp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toStartOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/verticalL"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/_65sdp"
        android:layout_height="@dimen/_65sdp"
        android:layout_marginStart="@dimen/_5sdp"
        android:contentDescription="@string/labelCipCode"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/emailLayout"
        app:layout_constraintEnd_toStartOf="@+id/verticalR"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="@+id/horizontalT"
        app:srcCompat="@drawable/im_logo" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:hint="@string/inputIdentifiant"
        app:layout_constraintEnd_toEndOf="@+id/verticalR"
        app:layout_constraintStart_toStartOf="@+id/verticalL"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/pwdLayout"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:hint="@string/inputPassword"
        app:layout_constraintEnd_toEndOf="@+id/verticalR"
        app:layout_constraintStart_toStartOf="@+id/verticalL"
        app:layout_constraintTop_toBottomOf="@+id/emailLayout"
        app:passwordToggleEnabled="true"
        android:layout_marginTop="@dimen/_15sdp"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/login"
        android:text="@string/buttonLogin"
        app:layout_constraintTop_toBottomOf="@+id/pwdLayout"
        style="@style/Button"
         />

</androidx.constraintlayout.widget.ConstraintLayout>