<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.activities.AddUserActivity">



    <include
            android:id="@+id/includedToolbar"
            layout="@layout/view_toolbar"/>

<androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintTop_toBottomOf="@+id/includedToolbar"
        app:layout_constraintBottom_toBottomOf="parent" tools:ignore="ScrollViewCount">

<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent" android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/verticalL"
            style="@style/verticalL" />

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/verticalR"
            style="@style/verticalR"/>

    <TextView
            android:id="@+id/addUserTitle"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:text="@string/titleAddUser"
            android:textSize="@dimen/_18sdp"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/black"
            app:layout_constraintEnd_toStartOf="@+id/verticalR"
            app:layout_constraintStart_toStartOf="@+id/verticalL"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="30dp"/>


    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputNomLayout"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:hint="@string/inputNom"
            app:layout_constraintStart_toStartOf="@id/verticalL"
            app:layout_constraintEnd_toEndOf="@id/verticalR"
            app:layout_constraintTop_toBottomOf="@+id/addUserTitle" android:layout_marginTop="20dp">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputNom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputIdentityLayout"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:hint="@string/inputIdentifiant"
            app:layout_constraintStart_toStartOf="@id/verticalL"
            app:layout_constraintEnd_toEndOf="@id/verticalR" app:layout_constraintTop_toBottomOf="@+id/inputNomLayout"
            android:layout_marginTop="10dp">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputIdentity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputEmailLayout"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:hint="@string/inputEmail"
            app:layout_constraintStart_toStartOf="@id/verticalL"
            app:layout_constraintEnd_toEndOf="@id/verticalR"
            app:layout_constraintTop_toBottomOf="@+id/inputIdentityLayout" android:layout_marginTop="10dp">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputPasswordLayout"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:hint="@string/inputPassword"
            app:layout_constraintStart_toStartOf="@id/verticalL"
            app:layout_constraintEnd_toEndOf="@id/verticalR" app:layout_constraintTop_toBottomOf="@+id/inputEmailLayout"
            android:layout_marginTop="10dp">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputPassword"
                android:layout_width="match_parent"
                android:inputType="textPassword"
                android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputCIPLayout"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:hint="@string/inputCIP"
            app:layout_constraintStart_toStartOf="@id/verticalL"
            app:layout_constraintEnd_toEndOf="@id/verticalR"
            app:layout_constraintTop_toBottomOf="@+id/inputPasswordLayout" android:layout_marginTop="10dp">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputCIP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputRoleLayout"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:hint="@string/inputRole"
            app:layout_constraintStart_toStartOf="@id/verticalL"
            app:layout_constraintEnd_toEndOf="@id/verticalR" app:layout_constraintTop_toBottomOf="@+id/inputCIPLayout"
            android:layout_marginTop="10dp">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputRole"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
            android:id="@+id/buttonRegister"
            android:text="@string/buttonRegister"
            style="@style/Button"
            app:layout_constraintTop_toBottomOf="@+id/inputRoleLayout" tools:layout_editor_absoluteX="40dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="50dp"
            tools:ignore="MissingConstraints"/>

</androidx.constraintlayout.widget.ConstraintLayout>



  </androidx.core.widget.NestedScrollView>




</androidx.constraintlayout.widget.ConstraintLayout>
