<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.AddDescriptionActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/verticalL"
        style="@style/verticalL"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/verticalR"
        style="@style/verticalR"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontalT"
        style="@style/horizontalT" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/codePod"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_12sdp"
        app:boxBackgroundColor="@color/bg_color"
        app:endIconDrawable="@drawable/ic_drag"
        app:layout_constraintEnd_toStartOf="@+id/codeIcon"
        app:layout_constraintStart_toStartOf="@+id/cmt"
        app:layout_constraintTop_toTopOf="@+id/horizontalT"
        app:startIconDrawable="@drawable/ic_check">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/codeNum"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/bg_color"
            android:singleLine="true"
            android:inputType="text"
            android:drawableEnd="@drawable/ic_drag"
            android:hint="@string/labelProductCode"

            />

    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/codeIcon"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:contentDescription="@string/labelCipCode"
        android:scaleType="centerCrop"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintEnd_toStartOf="@+id/verticalR"
        app:layout_constraintStart_toEndOf="@+id/codePod"
        app:layout_constraintTop_toTopOf="@+id/horizontalT"
        app:srcCompat="@drawable/im_logo" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/cmt"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_25sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        app:boxBackgroundColor="@color/bg_color"
        app:endIconDrawable="@drawable/ic_drag"
        app:layout_constraintEnd_toStartOf="@+id/verticalR"
        app:layout_constraintStart_toStartOf="@+id/verticalL"
        app:layout_constraintTop_toBottomOf="@+id/codePod"
        app:startIconDrawable="@drawable/ic_check">

        <AutoCompleteTextView
            android:id="@+id/typeProblem"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text"
            android:labelFor="@id/typeProblem"
            android:hint="@string/labelProblemType"
        />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/quantity"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_11sdp"
        android:hint="@string/labelQuantity"
        app:layout_constraintEnd_toEndOf="@+id/cmt"
        app:layout_constraintStart_toStartOf="@+id/cmt"
        app:layout_constraintTop_toBottomOf="@+id/cmt">

        <com.google.android.material.textfield.TextInputEditText
android:id="@+id/quantityTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/comment2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_40sdp"
        android:text="@string/inputComment"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintStart_toStartOf="@id/verticalL"
        app:layout_constraintTop_toBottomOf="@+id/quantity" />

    <EditText
            android:id="@+id/issue_cmt2"
            android:layout_width="@dimen/dp_0"
            android:layout_height="@dimen/_90sdp"
            android:gravity="start|top"
            android:hint="@string/inputCommentText"
            android:inputType="textMultiLine"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintEnd_toStartOf="@+id/verticalR"
            app:layout_constraintStart_toStartOf="@+id/verticalL"
            app:layout_constraintTop_toBottomOf="@+id/comment2" android:autofillHints=""/>

    <Button
        android:id="@+id/addToLigne"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_55sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:text="@string/buttonAddLine"
        android:textColor="@color/black"
        app:backgroundTint="@color/green"
        app:icon="@drawable/ic_add"
        app:iconSize="@dimen/_25sdp"
        app:iconTint="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/issue_cmt2"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="@+id/issue_cmt2"
        app:layout_constraintTop_toBottomOf="@+id/issue_cmt2"
        tools:textSize="@dimen/_12sdp" />

    <include
        android:id="@+id/addImg"
        layout="@layout/view_toolbar"/>

</androidx.constraintlayout.widget.ConstraintLayout>