<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="MissingConstraints"
        tools:context=".ui.activities.AppSettingsActivity">

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/verticalL"
            style="@style/verticalL" />

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/verticalR"
            style="@style/verticalR"/>

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/horizontalT"
            style="@style/horizontalT"/>


    <TextView
            android:id="@+id/appSettingsTitle"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:text="@string/titleAppSettings"
            android:textSize="@dimen/_18sdp"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/black"
            app:layout_constraintEnd_toStartOf="@+id/verticalR"
            app:layout_constraintStart_toStartOf="@+id/verticalL"
            app:layout_constraintTop_toTopOf="@+id/horizontalT"/>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputFncStateLayout"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:hint="@string/labelForFncState"
            app:layout_constraintStart_toStartOf="@id/verticalL"
            app:layout_constraintEnd_toEndOf="@id/verticalR"
            app:layout_constraintTop_toBottomOf="@+id/appSettingsTitle" android:layout_marginTop="20dp">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputFncState"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputFncTypeLayout"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:hint="@string/labelForFncType"
            app:layout_constraintStart_toStartOf="@id/verticalL"
            app:layout_constraintEnd_toEndOf="@id/verticalR"
            app:layout_constraintTop_toBottomOf="@+id/inputFncStateLayout" android:layout_marginTop="20dp">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputFncType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputFncRepLayout"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:hint="@string/labelForFncRep"
            app:layout_constraintStart_toStartOf="@id/verticalL"
            app:layout_constraintEnd_toEndOf="@id/verticalR"
            app:layout_constraintTop_toBottomOf="@+id/inputFncTypeLayout" android:layout_marginTop="20dp">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputFncRep"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>


    <Button
            android:id="@+id/buttonAddAppSettings"
            android:text="@string/buttonRegister"
            style="@style/Button"
            app:layout_constraintTop_toBottomOf="@+id/inputFncRepLayout" tools:layout_editor_absoluteX="40dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="50dp"/>

    <include
            android:id="@+id/includedToolbar"
            layout="@layout/view_toolbar"/>

</androidx.constraintlayout.widget.ConstraintLayout>