<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:ignore="MissingConstraints">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/verticalL"
        style="@style/verticalL"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/verticalR"
        style="@style/verticalR"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontalT"
        style="@style/horizontalT"
        app:layout_constraintGuide_percent="0.16"/>

    <TextView
            android:id="@+id/comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inputComment"
            android:textSize="@dimen/_14sdp"
            app:layout_constraintStart_toStartOf="@id/verticalL"
            app:layout_constraintTop_toTopOf="@+id/horizontalT"/>

    <EditText
        android:id="@+id/issue_cmt"
        android:layout_width="@dimen/dp_0"
        android:layout_height="@dimen/_100sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:gravity="start|top"
        android:hint="@string/inputCommentText"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toStartOf="@+id/verticalR"
        app:layout_constraintStart_toStartOf="@+id/verticalL"
        app:layout_constraintTop_toBottomOf="@+id/comment" />

    <View
        android:id="@+id/divider"
        android:layout_width="@dimen/dp_0"
        android:layout_height="@dimen/_2sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginBottom="@dimen/_15sdp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toStartOf="@+id/verticalR"
        app:layout_constraintStart_toStartOf="@+id/verticalL"
        app:layout_constraintTop_toBottomOf="@+id/issue_cmt" />

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="@dimen/dp_0"
            android:layout_height="@dimen/dp_0"
            android:orientation="vertical"
            app:layout_constraintEnd_toStartOf="@+id/verticalR"
            app:layout_constraintStart_toStartOf="@+id/verticalL"
            app:layout_constraintTop_toBottomOf="@+id/divider" app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.card.MaterialCardView
                android:id="@+id/fnc_card_empty"
                style="@style/Card"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_100sdp"
                android:backgroundTint="@color/card">

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <TextView
                        android:id="@+id/fnc_title"
                        style="@style/Text"
                        android:text="@string/messageNoSummaryAvailable"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <FrameLayout
                android:id="@+id/fncContentContainer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="visible"
                app:layout_constraintTop_toBottomOf="@+id/fnc_card_empty">

            <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/cardView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
        </FrameLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>


    <include
        android:id="@id/includedToolbar"
        layout="@layout/view_toolbar_button"/>

</androidx.constraintlayout.widget.ConstraintLayout>